<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".activities.CategoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/title_new_habit"
            android:textSize="32dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_habit_category"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/light_gray"/>

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@drawable/entry_background"
                android:padding="10dp"
                android:backgroundTint="#ffffff"
                android:src="@drawable/icon_categories" />
        </LinearLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_habit_habit_name"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_habit_description"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_habit_type"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/yesNoRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:checked="true"
                android:buttonTint="@color/light_gray"
                android:text="@string/new_habit_type_yesno" />

            <RadioButton
                android:id="@+id/numberRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:buttonTint="@color/light_gray"
                android:text="@string/new_habit_type_number" />

            <RadioButton
                android:id="@+id/timeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:buttonTint="@color/light_gray"
                android:text="@string/new_habit_type_timer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startDateTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_habit_start_date"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startDateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text=""
                android:textColor="@color/light_gray" />

        </LinearLayout>

        <Switch
            android:id="@+id/endDateSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:text="@string/new_habit_end_date"
            android:buttonTint="@color/light_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/endDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/endDateTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_habit_end_date"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endDateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text=""
                android:textColor="@color/light_gray" />

        </LinearLayout>

        <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_habit_priority"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/priorityEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/light_gray" />

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:text="@string/settings_reminder"
            android:buttonTint="@color/light_gray"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/reminderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reminderTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_habit_reminder_time"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminderEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text=""
                android:textColor="@color/light_gray" />

        </LinearLayout>

        <Button
            android:id="@+id/createButton"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/entry_background"
            android:text="@string/button_create" />
    </LinearLayout>
</ScrollView>